[package]
name = "userop-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
ethers = "2.0.8"
silius_bundler_primitives = { git = "https://github.com/Vid201/silius.git", rev="1ec9ad6", package = "silius-primitives" }
reqwest = "0.11.18"
hashbrown = "0.14.0"
async-trait = "0.1.72"



