[package]
name = "ethers-userop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
ethers = "2.0.8"
silius_primitives = { git = "https://github.com/qi-protocol/silius.git", branch="ethuo", package = "silius-primitives" }
silius_grpc = { git = "https://github.com/qi-protocol/silius.git", branch="ethuo", package = "silius-grpc" }
silius_rpc = { git = "https://github.com/qi-protocol/silius.git", branch="ethuo", package = "silius-rpc" }
reqwest = "0.11.18"
hashbrown = "0.14.0"
async-trait = "0.1.72"
dirs = "5.0.1"
expanded-pathbuf = "0.1.2"
pin-utils = "0.1"
tokio = "1.31.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
dotenv = "0.15.0"
serde_json = "1"
serde = "1"
thiserror = "1.0.40"
alloy-primitives = "0.2.0"
alloy-sol-types = "0.2.0"
env_logger = "0.10.0"
tempdir = "0.3.7"
log = "0.4.20"
rand = "0.8.5"
parking_lot = "0.12.1"
regex = "1.9.4"
clap = { version = "4", features = ["derive", "env"]}

[[bin]]
name = "ethuo"
path = "src/main.rs"

[[bin]]
name = "bundler"
path = "src/bundler.rs"

[[bin]]
name = "create-smart-contract-wallet"
path = "src/bin/create_smart_contract_wallet.rs"

[lib]
path = "src/lib.rs"


